--- a/src/app/usit/components/sales/interview-list/interview-list.component.scss
+++ b/src/app/usit/components/sales/interview-list/interview-list.component.scss
@@ -127,7 +127,7 @@
   }
   
   .interview-table-style {
-     max-height: 78vh; /* Or any height you want */
+     max-height: 77vh; /* Or any height you want */
   overflow: auto;
   }
   
@@ -282,4 +282,17 @@
     height: 24px !important;
   }
 
-  
+  mat-mdc-paginator {
+    display: block;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    color: var(--mat-paginator-container-text-color);
+    background-color: var(--mat-paginator-container-background-color);
+    font-family: var(--mat-paginator-container-text-font);
+    line-height: var(--mat-paginator-container-text-line-height);
+    font-size: var(--mat-paginator-container-text-size);
+    font-weight: var(--mat-paginator-container-text-weight);
+    letter-spacing: var(--mat-paginator-container-text-tracking);
+    margin-bottom: 16px !important;
+}
+
