--- a/src/app/usit/components/tech-support-list/tech-support-list.component.scss
+++ b/src/app/usit/components/tech-support-list/tech-support-list.component.scss
@@ -141,7 +141,7 @@
   }
   
   .table-style {
- max-height: 78vh; /* Or any height you want */
+ max-height: 77vh; /* Or any height you want */
   overflow: auto;
   }
   
@@ -275,4 +275,14 @@
     max-width: none !important;
     white-space: normal !important;
   }
-  
+  .mat-mdc-paginator-container {
+    display: flex
+;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0 8px;
+    flex-wrap: wrap-reverse;
+    width: 100%;
+    min-height: var(--mat-paginator-container-size);
+    margin-bottom:3px !important
+}
