--- a/src/app/usit/components/vendor-management/current-primary-vendor-list/current-primary-vendor-list.component.scss
+++ b/src/app/usit/components/vendor-management/current-primary-vendor-list/current-primary-vendor-list.component.scss
@@ -171,7 +171,7 @@
   }
   
   .vendor-table-style {
-    max-height: 78vh; /* Or any height you want */
+    max-height: 77vh; /* Or any height you want */
   overflow: auto;
   }
   
@@ -329,3 +329,14 @@
     width: 24px !important;
     height: 24px !important;
   }
+  .mat-mdc-paginator-container {
+    display: flex
+;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0 8px;
+    flex-wrap: wrap-reverse;
+    width: 100%;
+    min-height: var(--mat-paginator-container-size);
+    margin-bottom: 6px !important;
+}
