--- a/src/app/usit/components/vendor-management/future-primary-vendor-list/future-primary-vendor-list.component.scss
+++ b/src/app/usit/components/vendor-management/future-primary-vendor-list/future-primary-vendor-list.component.scss
@@ -329,3 +329,14 @@
     width: 24px !important;
     height: 24px !important;
   }
+  .mat-mdc-paginator-container {
+    display: flex
+;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0 8px;
+    flex-wrap: wrap-reverse;
+    width: 100%;
+    min-height: var(--mat-paginator-container-size);
+    margin-bottom:-2px !important
+}
