--- a/src/app/usit/components/vendor-management/recruiter-list/recruiter-list.component.scss
+++ b/src/app/usit/components/vendor-management/recruiter-list/recruiter-list.component.scss
@@ -134,7 +134,7 @@ tbody {
 }
 
 .recruiter-table-style {
-    max-height: 78vh; /* Or any height you want */
+    max-height: 77vh; /* Or any height you want */
   overflow: auto;
 }
 .action-btns{
@@ -262,4 +262,15 @@ td.approve-buttons.cdk-cell.cdk-column-Approve-Reject.mat-column-Approve-Reject.
     display: flex;
     align-items: center;
         margin-bottom: -16px !important;
+}
+.mat-mdc-paginator-container {
+    display: flex
+;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0 8px;
+    flex-wrap: wrap-reverse;
+    width: 100%;
+    min-height: var(--mat-paginator-container-size);
+        margin-bottom: 16px !important;
 }
