--- a/src/app/usit/components/openreqs/cpv-fpv-open-requirements/cpv-fpv-open-requirements.component.scss
+++ b/src/app/usit/components/openreqs/cpv-fpv-open-requirements/cpv-fpv-open-requirements.component.scss
@@ -118,7 +118,7 @@ tbody {
 }
 
 .hot-list-table-style {
-   max-height: 78vh; /* Or any height you want */
+   max-height: 77vh; /* Or any height you want */
   overflow: auto;
 }
 
@@ -276,3 +276,12 @@ action-button-ed
 .mat-column-Name {
   border-right: 1px solid lightgray;
 }
+.mat-mdc-paginator {
+    display: block;
+    line-height: var(--mat-paginator-container-text-line-height);
+    font-size: var(--mat-paginator-container-text-size);
+    font-weight: var(--mat-paginator-container-text-weight);
+    letter-spacing: var(--mat-paginator-container-text-tracking);
+    margin-bottom: 22px !important;
+}
+
