--- a/src/app/usit/components/openreqs/openreqs.component.scss
+++ b/src/app/usit/components/openreqs/openreqs.component.scss
@@ -119,7 +119,7 @@ action-button-ed
 }
 
 .hot-list-table-style {
-  max-height: 78vh; /* Or any height you want */
+  max-height: 77vh; /* Or any height you want */
   overflow: auto;
 }
 
@@ -339,3 +339,38 @@ margin-bottom: 0px !important;
   padding: 0 4px 0 4px;
   border-right: 1px solid lightgray !important;
 }
+.avatar-list {
+  display: flex;
+  gap: 8px;
+}
+
+.avatar-circle {
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  font-size: 12px;
+  color: white;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  background-color: #3f51b5;
+  cursor: pointer;
+  box-shadow: 0 0 0 1px #ccc;
+}
+
+::ng-deep .mat-tooltip.vertical-tooltip {
+  white-space: pre-line !important;
+  text-align: left;
+  font-size: 12px;
+}
+.mat-mdc-paginator {
+    display: block;
+    line-height: var(--mat-paginator-container-text-line-height);
+    font-size: var(--mat-paginator-container-text-size);
+    font-weight: var(--mat-paginator-container-text-weight);
+    letter-spacing: var(--mat-paginator-container-text-tracking);
+    margin-bottom: 16px !important;
+}
+
