--- a/src/app/usit/components/people/leave-of-absence/leave-of-absence.component.scss
+++ b/src/app/usit/components/people/leave-of-absence/leave-of-absence.component.scss
@@ -120,7 +120,7 @@ tbody {
 }
 
 .interview-table-style {
- max-height: 78vh; /* Or any height you want */
+ max-height: 77vh; /* Or any height you want */
   overflow: auto;
 }
 
@@ -306,4 +306,17 @@ ul.breadcrumb li:last-child {
 ::ng-deep .action-button-ed .mat-mdc-focus-indicator {
   width: 24px !important;
   height: 24px !important;
+}
+.mat-mdc-paginator {
+    display: block;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    color: var(--mat-paginator-container-text-color);
+    background-color: var(--mat-paginator-container-background-color);
+    font-family: var(--mat-paginator-container-text-font);
+    line-height: var(--mat-paginator-container-text-line-height);
+    font-size: var(--mat-paginator-container-text-size);
+    font-weight: var(--mat-paginator-container-text-weight);
+    letter-spacing: var(--mat-paginator-container-text-tracking);
+    margin-bottom: 25px !important;
 }
