--- a/src/app/usit/components/sales/h1transfer/h1transfer.component.scss
+++ b/src/app/usit/components/sales/h1transfer/h1transfer.component.scss
@@ -122,7 +122,7 @@
   }
   
   .hot-list-table-style {
-    max-height: 78vh; /* Or any height you want */
+    max-height: 77vh; /* Or any height you want */
   overflow: auto;
   }
   
@@ -198,3 +198,14 @@
   //     height: 90vh;
   //   }
   // }
+  .mat-mdc-paginator-container {
+    display: flex
+;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0 8px;
+    flex-wrap: wrap-reverse;
+    width: 100%;
+    min-height: var(--mat-paginator-container-size);
+    margin-bottom: 18px !important;
+}
