--- a/src/app/usit/components/technology-tag-list/technology-tag-list.component.scss
+++ b/src/app/usit/components/technology-tag-list/technology-tag-list.component.scss
@@ -114,7 +114,7 @@ tbody {
 }
 
 .hot-list-table-style {
-    max-height: 78vh; /* Or any height you want */
+    max-height: 77vh; /* Or any height you want */
   overflow: auto;
 }
 
@@ -209,4 +209,17 @@ ul.breadcrumb li:last-child {
 .mdc-data-table__cell, .mdc-data-table__header-cell {
   padding: 0 4px 0 4px;
   border-right: 1px solid lightgray !important;
+}
+.mat-mdc-paginator {
+    display: block;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    color: var(--mat-paginator-container-text-color);
+    background-color: var(--mat-paginator-container-background-color);
+    font-family: var(--mat-paginator-container-text-font);
+    line-height: var(--mat-paginator-container-text-line-height);
+    font-size: var(--mat-paginator-container-text-size);
+    font-weight: var(--mat-paginator-container-text-weight);
+    letter-spacing: var(--mat-paginator-container-text-tracking);
+    margin-bottom: 20px !important;
 }
