--- a/src/app/usit/components/vendor-management/client-information/client-information.component.scss
+++ b/src/app/usit/components/vendor-management/client-information/client-information.component.scss
@@ -144,7 +144,7 @@ tbody {
 }
 
 .tcvr-table-style {
-    max-height: 78vh; /* Or any height you want */
+    max-height: 77vh; /* Or any height you want */
   overflow: auto;
 }
 
@@ -332,4 +332,12 @@ ul.breadcrumb li:last-child {
     cursor: pointer;
     color: #4154f1;
   }
+}
+.mat-mdc-paginator {
+    display: block;
+    line-height: var(--mat-paginator-container-text-line-height);
+    font-size: var(--mat-paginator-container-text-size);
+    font-weight: var(--mat-paginator-container-text-weight);
+    letter-spacing: var(--mat-paginator-container-text-tracking);
+    margin-bottom: 14px !important;
 }
