--- a/src/app/usit/components/vendor-management/known-vendor-contacts/known-vendor-contacts.component.scss
+++ b/src/app/usit/components/vendor-management/known-vendor-contacts/known-vendor-contacts.component.scss
@@ -169,7 +169,7 @@
   }
   
   .vendor-table-style {
-    max-height: 78vh; /* Or any height you want */
+    max-height: 77vh; /* Or any height you want */
   overflow: auto;
   }
   
@@ -365,3 +365,16 @@
     text-decoration: none;
     color: #0d6efd;
   }
+  .mat-mdc-paginator {
+    display: block;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    color: var(--mat-paginator-container-text-color);
+    background-color: var(--mat-paginator-container-background-color);
+    font-family: var(--mat-paginator-container-text-font);
+    line-height: var(--mat-paginator-container-text-line-height);
+    font-size: var(--mat-paginator-container-text-size);
+    font-weight: var(--mat-paginator-container-text-weight);
+    letter-spacing: var(--mat-paginator-container-text-tracking);
+        margin-bottom: 19px !important;
+}
