--- a/src/app/usit/components/reports/employee-reports/interview-report/interview-report.component.html
+++ b/src/app/usit/components/reports/employee-reports/interview-report/interview-report.component.html
@@ -52,7 +52,7 @@
           <th>Client</th>
           <th>Date Of Submission</th>
           <th>Employee Name</th>
-          <th>Interview Status</th>
+          <th> Status</th>
         </tr>
       </thead>
       <tbody class="tbody">
