--- a/src/app/usit/components/openreqs/openreqs.component.html
+++ b/src/app/usit/components/openreqs/openreqs.component.html
@@ -9,10 +9,7 @@
       <mat-form-field class="portal-form-field">
         <mat-label>Select a Portal</mat-label>
         <mat-select (selectionChange)="onSelectionChange($event)">
-          <mat-option
-            *ngFor="let option of currentOptions"
-            [value]="option.value"
-          >
+          <mat-option *ngFor="let option of currentOptions" [value]="option.value">
             {{ option.label }}
           </mat-option>
         </mat-select>
@@ -20,29 +17,16 @@
     </div>
     <div class="hot-list-actions">
       <div class="search-hot-list">
-        <input
-          matInput
-          type="text"
-          class="search"
-          placeholder="search "
-          (keyup)="applyFilter($event)"
-        />
+        <input matInput type="text" class="search" placeholder="search " (keyup)="applyFilter($event)" />
       </div>
     </div>
   </div>
 
   <div id="table-container" class="table-wrapper">
-    <mat-tab-group
-      (selectedTabChange)="onTabChanged($event)"
-      mat-stretch-tabs="false"
-      mat-align-tabs="start"
-      color="primary"
-      backgroundColor="primary"
-    >
+    <mat-tab-group (selectedTabChange)="onTabChanged($event)" mat-stretch-tabs="false" mat-align-tabs="start"
+      color="primary" backgroundColor="primary">
       <mat-tab *ngFor="let tab of tabs" [label]="tab">
-        <ng-container
-          *ngTemplateOutlet="tableTemplate; context: { status: tab }"
-        ></ng-container>
+        <ng-container *ngTemplateOutlet="tableTemplate; context: { status: tab }"></ng-container>
       </mat-tab>
     </mat-tab-group>
 
@@ -67,9 +51,9 @@
             </th>
             <td mat-cell *matCellDef="let element" nowrap style="width: 2%">
               {{
-                isValidDate(element?.requirement.posted_on)
-                  ? (element?.requirement.posted_on | date : "MM-dd-yyyy HH:mm")
-                  : "N/A"
+              isValidDate(element?.requirement.posted_on)
+              ? (element?.requirement.posted_on | date : "MM-dd-yyyy HH:mm")
+              : "N/A"
               }}
             </td>
           </ng-container>
@@ -78,13 +62,8 @@
           <ng-container matColumnDef="job_title">
             <th mat-header-cell *matHeaderCellDef style="width: 20%">Title</th>
             <td mat-cell *matCellDef="let element" style="width: 20%">
-              <span class="consultant-name"
-                ><a
-                  href="{{ element?.requirement.job_source }}"
-                  target="_blank"
-                  (click)="empTag(element.requirement.id)"
-                  >{{ element?.requirement.job_title | titlecase }}</a
-                >
+              <span class="consultant-name"><a href="{{ element?.requirement.job_source }}" target="_blank"
+                  (click)="empTag(element.requirement.id)">{{ element?.requirement.job_title | titlecase }}</a>
               </span>
             </td>
           </ng-container>
@@ -93,34 +72,25 @@
             <td mat-cell *matCellDef="let element">
               <div class="avatar-group">
                 <!-- first three avatars -->
-                <ng-container
-                  *ngFor="
+                <ng-container *ngFor="
                     let c of firstThree(element.consultants);
                     let i = index
-                  "
-                >
-                  <div
-                    class="avatar"
-                    [ngStyle]="{ 'background-color': avatarColors[i] }"
-                    [title]="c.conName"
-                  >
+                  ">
+                  <div class="avatar" [ngStyle]="{ 'background-color': avatarColors[i] }" (click)="
+                    openConsultantDialog(element.consultants);
+                    $event.stopPropagation()
+                  " style="cursor: pointer;" [title]="c.conName">
                     {{ c.conName.charAt(0).toUpperCase() }}
                   </div>
                 </ng-container>
 
                 <!-- +N badge opens dialog -->
-                <div
-                  *ngIf="element.consultants.length > 3"
-                  class="avatar more-badge"
-                  style="cursor: pointer"
-                  (click)="
+                <div *ngIf="element.consultants.length > 3" class="avatar more-badge" style="cursor: pointer" (click)="
                     openConsultantDialog(element.consultants);
                     $event.stopPropagation()
-                  "
-                  [title]="
+                  " [title]="
                     'View all ' + element.consultants.length + ' consultants'
-                  "
-                >
+                  ">
                   +{{ element.consultants.length - 3 }}
                 </div>
               </div>
@@ -158,13 +128,7 @@
           <!-- Rate Column mat-sort-header sortActionDescription="Sort by Rate"-->
           <ng-container matColumnDef="vendor">
             <th mat-header-cell *matHeaderCellDef style="width: 12%">Vendor</th>
-            <td
-              mat-cell
-              *matCellDef="let element"
-              class="req-info"
-              (click)="goToReqInfo(element)"
-              style="width: 12%"
-            >
+            <td mat-cell *matCellDef="let element" class="req-info" (click)="goToReqInfo(element)" style="width: 12%">
               {{ element?.requirement.vendor | titlecase }}
             </td>
           </ng-container>
@@ -174,13 +138,8 @@
             <th mat-header-cell *matHeaderCellDef style="width: 3%">
               Job Description
             </th>
-            <td
-              mat-cell
-              *matCellDef="let element"
-              class="jd-info"
-              (click)="goToJobDescription(element)"
-              style="width: 3%"
-            >
+            <td mat-cell *matCellDef="let element" class="jd-info" (click)="goToJobDescription(element)"
+              style="width: 3%">
               VIEW
             </td>
           </ng-container>
@@ -192,16 +151,10 @@
             </th>
             <td mat-cell *matCellDef="let element" style="width: 3%">
               <span class="action-buttons">
-                <button
-                  mat-icon-button
-                  class="action-button-ed"
-                  (click)="jobComments(element)"
-                >
+                <button mat-icon-button class="action-button-ed" (click)="jobComments(element)">
                   <mat-icon>comment</mat-icon>
                 </button>
-                <span class="bold-text"
-                  >({{ element?.requirement.commentsCount || "0" }})</span
-                >
+                <span class="bold-text">({{ element?.requirement.commentsCount || "0" }})</span>
               </span>
             </td>
           </ng-container>
@@ -232,13 +185,8 @@
               </button>
 
               <!-- Hidden File Input (One per row) -->
-              <input
-                type="file"
-                #fileInputRef
-                accept=".pdf,.doc,.docx"
-                style="display: none"
-                (change)="onFileSelectedata($event, element)"
-              />
+              <input type="file" #fileInputRef accept=".pdf,.doc,.docx" style="display: none"
+                (change)="onFileSelectedata($event, element)" />
             </td>
           </ng-container>
 
@@ -246,26 +194,14 @@
             <th mat-header-cell *matHeaderCellDef style="width: 3%">
               Percentage
             </th>
-            <td
-              mat-cell
-              *matCellDef="let element"
-              nowrap
-              style="width: 3%; text-align: center"
-            >
+            <td mat-cell *matCellDef="let element" nowrap style="width: 3%; text-align: center">
               {{ element?.requirement.percentage || "N/A" }}
             </td>
           </ng-container>
 
           <!-- table ROW -->
-          <tr
-            mat-header-row
-            *matHeaderRowDef="dataTableColumns; sticky: true"
-          ></tr>
-          <tr
-            mat-row
-            *matRowDef="let row; columns: dataTableColumns"
-            [ngStyle]="getRowStyles(row)"
-          ></tr>
+          <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
+          <tr mat-row *matRowDef="let row; columns: dataTableColumns" [ngStyle]="getRowStyles(row)"></tr>
         </table>
         <p class="no-data-found" *ngIf="!dataSource.data.length">
           {{ "No matching data found" }}
@@ -277,29 +213,37 @@
 
   <div class="paginator" *ngIf="dataSource.filteredData.length">
     <!-- paginator -->
-    <mat-paginator
-      (page)="handlePageEvent($event)"
-      [length]="totalItems"
-      [pageSize]="pageSize"
-      [disabled]="false"
-      [showFirstLastButtons]="showFirstLastButtons"
-      [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
-      [hidePageSize]="true"
-      [pageIndex]="currentPageIndex"
-      aria-label="Select page"
-    >
+    <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false"
+      [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
+      [hidePageSize]="true" [pageIndex]="currentPageIndex" aria-label="Select page">
     </mat-paginator>
   </div>
 </div>
 <!-- … your mat-table for the main list … -->
 
 <ng-template #consultantDialog>
-  <h2 mat-dialog-title class="dialog-header">
-    <span style="font-weight: 700; font-size: 19px">Consultants</span>
+<h2 mat-dialog-title class="dialog-header">
+  <div class="header-left">
+    <span class="title-text">Consultants</span>
+  </div>
+
+  <div class="header-right">
+    <div class="searchconsultant-hot-list">
+      <input
+        matInput
+        type="text"
+        class="search"
+        placeholder="Search"
+        (keyup)="consultanttable($event)"
+      />
+    </div>
     <button mat-icon-button class="close-button" (click)="onCancel()">
       <mat-icon>close</mat-icon>
     </button>
-  </h2>
+  </div>
+</h2>
+
+
 
   <mat-dialog-content>
     <table mat-table [dataSource]="pagedConsultants" class="mat-elevation-z1">
@@ -331,34 +275,29 @@
       <ng-container matColumnDef="matchedSkills">
         <th mat-header-cell *matHeaderCellDef sticky>Matched Skills</th>
         <td mat-cell *matCellDef="let c">
-         
-            {{ c.matchedSkills || "-" }}
+
+          {{ c.matchedSkills || "-" }}
         </td>
       </ng-container>
 
       <!-- Unmatched Skills Column -->
       <ng-container matColumnDef="unMatchedSkills">
-        <th mat-header-cell *matHeaderCellDef sticky>MisMatch Skills</th>
+        <th mat-header-cell *matHeaderCellDef sticky>MisMatched Skills</th>
         <td mat-cell *matCellDef="let c">
-         
-            {{ c.unMatchedSkills || "-" }}
+
+          {{ c.unMatchedSkills || "-" }}
         </td>
       </ng-container>
 
       <!-- Header & Rows -->
-      <tr
-        mat-header-row
-        *matHeaderRowDef="[
+      <tr mat-header-row *matHeaderRowDef="[
           'serialNum',
           'conName',
           'percentage',
           'matchedSkills',
           'unMatchedSkills'
-        ]"
-      ></tr>
-      <tr
-        mat-row
-        *matRowDef="
+        ]"></tr>
+      <tr mat-row *matRowDef="
           let row;
           columns: [
             'serialNum',
@@ -367,34 +306,31 @@
             'matchedSkills',
             'unMatchedSkills'
           ]
-        "
-      ></tr>
+        "></tr>
+
+
     </table>
+    <!-- No matching data found -->
+    <div *ngIf="filteredConsultants.length === 0" style="    text-align: center;
+    padding: 39px 13px;
+    font-weight: 700;
+    color: black;
+    font-size: 16px;">
+      No matching data found
+    </div>
   </mat-dialog-content>
 
   <mat-dialog-actions>
     <div class="custom-pagination">
-      <button
-        mat-icon-button
-        (click)="prevPage()"
-        [disabled]="currentPage === 1"
-      >
+      <button mat-icon-button (click)="prevPage()" [disabled]="currentPage === 1">
         <mat-icon>chevron_left</mat-icon>
       </button>
 
-      <button
-        *ngFor="let pg of getPageNumbers()"
-        (click)="goToPage(pg)"
-        [class.active]="currentPage === pg"
-      >
+      <button *ngFor="let pg of getPageNumbers()" (click)="goToPage(pg)" [class.active]="currentPage === pg">
         {{ pg }}
       </button>
 
-      <button
-        mat-icon-button
-        (click)="nextPage()"
-        [disabled]="currentPage === totalPages"
-      >
+      <button mat-icon-button (click)="nextPage()" [disabled]="currentPage === totalPages">
         <mat-icon>chevron_right</mat-icon>
       </button>
     </div>
