--- a/src/app/usit/components/employee-list/add-employee/add-employee.component.html
+++ b/src/app/usit/components/employee-list/add-employee/add-employee.component.html
@@ -10,26 +10,26 @@
 <!-- matcard starts-->
 <mat-card class="card" id="empCard">
   <!-- form starts-->
-  <form [formGroup]="employeeForm" class="employee-form" id="empForm">
+  <form [formGroup]="employeeForm" *ngIf="employeeForm"class="employee-form" id="empForm">
     <!-- form input controls -->
     <section class="form-container">
-      <div class="form-column-left" *ngIf="employeeForm.controls">
+      <div class="form-column-left" *ngIf="employeeForm?.controls">
         <!-- Full Name -->
         <mat-form-field appearance="fill">
           <mat-label>Full Name</mat-label>
           <input matInput formControlName="fullname" maxlength="50" (input)="camelCase($event)">
-          <mat-error *ngIf="employeeForm.get('fullname').hasError('required')">Full
+          <mat-error *ngIf="employeeForm.get('fullname')?.hasError('required')">Full
             Name is required</mat-error>
-          <mat-error *ngIf="employeeForm.get('fullname').hasError('minlength')">Full Name must be at least 6
+          <mat-error *ngIf="employeeForm.get('fullname')?.hasError('minlength')">Full Name must be at least 6
             characters</mat-error>
-          <mat-error *ngIf="employeeForm.get('fullname').hasError('maxlength')">Full Name must not exceed 100
+          <mat-error *ngIf="employeeForm.get('fullname')?.hasError('maxlength')">Full Name must not exceed 100
             characters</mat-error>
         </mat-form-field>
         <!-- Psuedo Name -->
         <mat-form-field appearance="fill">
           <mat-label>Psuedo Name</mat-label>
           <input matInput formControlName="pseudoname" maxlength="15" (input)="camelCase($event)">
-          <mat-error *ngIf="employeeForm.get('pseudoname').hasError('required')">Psuedo
+          <mat-error *ngIf="employeeForm.get('pseudoname')?.hasError('required')">Psuedo
             Name is required</mat-error>
         </mat-form-field>
         <!-- Official Email -->
@@ -46,9 +46,9 @@
         <mat-form-field appearance="fill">
           <mat-label>Personal Email</mat-label>
           <input matInput formControlName="personalemail" maxlength="50" (input)="convertToLowerCase($event)">
-          <mat-error *ngIf="employeeForm.get('personalemail').hasError('required')">Email
+          <mat-error *ngIf="employeeForm.get('personalemail')?.hasError('required')">Email
             is required</mat-error>
-          <mat-error *ngIf="employeeForm.get('personalemail').hasError('email')">Invalid
+          <mat-error *ngIf="employeeForm.get('personalemail')?.hasError('email')">Invalid
             email address</mat-error>
         </mat-form-field>
         <!-- Personal Contact -->
@@ -59,7 +59,7 @@
             name="personalcontactnumber" id="intlInput" #personalcontactnumber #pNumb
             (keypress)="onlyNumberKey($event)">
           </ngx-mat-intl-tel-input>
-          <mat-error *ngIf="employeeForm.get('personalcontactnumber').hasError('required')">Personal
+          <mat-error *ngIf="employeeForm.get('personalcontactnumber')?.hasError('required')">Personal
             Contact
             Number is required</mat-error>
         </mat-form-field>
@@ -81,7 +81,8 @@
           <mat-datepicker-toggle matIconSuffix [for]="datepicker"></mat-datepicker-toggle>
           <mat-datepicker #datepicker>
           </mat-datepicker>
-          <mat-error *ngIf="employeeForm.controls.joiningdate.hasError('required')">Joining Date Required</mat-error>
+          <mat-error *ngIf="employeeForm.controls['joiningdate']?.hasError('required')">Joining Date
+            Required</mat-error>
         </mat-form-field>
         <!-- Releiving Date -->
         <mat-form-field appearance="fill">
@@ -90,7 +91,8 @@
           <mat-datepicker-toggle matIconSuffix [for]="datepicker2"></mat-datepicker-toggle>
           <mat-datepicker #datepicker2>
           </mat-datepicker>
-          <mat-error *ngIf="employeeForm.controls.relievingdate.hasError('relievingBeforeJoining')">Relieving date
+          <mat-error *ngIf="employeeForm.controls['relievingdate']?.hasError('relievingBeforeJoining')">
+            Relieving date
             cannot be earlier than joining date.</mat-error>
         </mat-form-field>
 
@@ -106,8 +108,8 @@
         <mat-form-field appearance="fill" *ngIf="showOtherDetails">
           <mat-label>Aadhar Number</mat-label>
           <input matInput formControlName="aadharno" maxlength="12" (keypress)="onlyNumberKey($event)">
-          <mat-error *ngIf="employeeForm.get('aadharno').hasError('required')">Aadhar Number is required</mat-error>
-          <mat-error *ngIf="employeeForm.get('aadharno').hasError('pattern')">Aadhar Number must be exactly 12
+          <mat-error *ngIf="employeeForm.get('aadharno')?.hasError('required')">Aadhar Number is required</mat-error>
+          <mat-error *ngIf="employeeForm.get('aadharno')?.hasError('pattern')">Aadhar Number must be exactly 12
             digits</mat-error>
         </mat-form-field>
         <!-- PAN -->
@@ -115,8 +117,8 @@
           <mat-label>PAN Number</mat-label>
           <input matInput formControlName="panno" placeholder="Ex: ABCDE1234F" maxlength="10"
             (keypress)="onlyAlphanumericKey($event)">
-          <mat-error *ngIf="employeeForm.get('panno').hasError('required')">PAN Number is required</mat-error>
-          <mat-error *ngIf="employeeForm.get('panno').hasError('pattern')">Invalid PAN Number</mat-error>
+          <mat-error *ngIf="employeeForm.get('panno')?.hasError('required')">PAN Number is required</mat-error>
+          <mat-error *ngIf="employeeForm.get('panno')?.hasError('pattern')">Invalid PAN Number</mat-error>
         </mat-form-field>
       </div>
       <div class="form-column-right">
@@ -124,26 +126,26 @@
         <mat-form-field appearance="fill" *ngIf="showOtherDetails">
           <mat-label>Bank Name</mat-label>
           <input matInput formControlName="bankname" maxlength="100" (input)="camelCase($event)">
-          <mat-error *ngIf="employeeForm.get('bankname').hasError('required')">Bank Name is required</mat-error>
+          <mat-error *ngIf="employeeForm.get('bankname')?.hasError('required')">Bank Name is required</mat-error>
         </mat-form-field>
         <!-- AC NUMBER -->
         <mat-form-field appearance="fill" *ngIf="showOtherDetails">
           <mat-label>Account Number</mat-label>
           <input matInput formControlName="accno" maxlength="15" (keypress)="onlyNumberKey($event)">
-          <mat-error *ngIf="employeeForm.get('accno').hasError('required')">Account Number is required</mat-error>
+          <mat-error *ngIf="employeeForm.get('accno')?.hasError('required')">Account Number is required</mat-error>
         </mat-form-field>
         <!-- IFSC -->
         <mat-form-field appearance="fill" *ngIf="showOtherDetails">
           <mat-label>IFSC Code</mat-label>
           <input matInput formControlName="ifsc" maxlength="11" (keypress)="onlyAlphanumericKey($event)">
-          <mat-error *ngIf="employeeForm.get('ifsc').hasError('required')">IFSC Code is required</mat-error>
-          <mat-error *ngIf="employeeForm.get('ifsc').hasError('pattern')">Invalid IFSC Code</mat-error>
+          <mat-error *ngIf="employeeForm.get('ifsc')?.hasError('required')">IFSC Code is required</mat-error>
+          <mat-error *ngIf="employeeForm.get('ifsc')?.hasError('pattern')">Invalid IFSC Code</mat-error>
         </mat-form-field>
         <!-- Branch -->
         <mat-form-field appearance="fill" *ngIf="showOtherDetails">
           <mat-label>Branch Name</mat-label>
           <input matInput formControlName="branch" maxlength="50" (input)="camelCase($event)">
-          <mat-error *ngIf="employeeForm.get('branch').hasError('required')">Branch Name is required</mat-error>
+          <mat-error *ngIf="employeeForm.get('branch')?.hasError('required')">Branch Name is required</mat-error>
         </mat-form-field>
 
         <!-- <mat-form-field appearance="fill" *ngIf="isCompanyToDisplay">
@@ -158,20 +160,21 @@
           </mat-error>
         </mat-form-field> -->
 
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" *ngIf="employeeForm">
           <mat-label>Select Company</mat-label>
           <input matInput formControlName="cid" [matAutocomplete]="companyAuto">
 
           <mat-autocomplete #companyAuto="matAutocomplete" [displayWith]="displayCompanyName">
-            <mat-option *ngFor="let option of companyOptions" [value]="option.cid">
+            <mat-option *ngFor="let option of companyOptions" [value]="option?.cid">
               {{ option.companyName }}
             </mat-option>
           </mat-autocomplete>
 
-          <mat-error *ngIf="employeeForm.get('cid').hasError('required')">
+          <mat-error *ngIf="employeeForm.get('cid')?.hasError('required')">
             Choose Company is required
           </mat-error>
         </mat-form-field>
+
 
         <!-- Designation -->
         <mat-form-field appearance="fill">
@@ -187,7 +190,7 @@
               {{ option }}
             </mat-option>
           </mat-autocomplete>
-          <mat-error *ngIf="employeeForm.get('department').hasError('required')">Choose
+          <mat-error *ngIf="employeeForm?.get('department')?.hasError('required')">Choose
             Deparment</mat-error>
         </mat-form-field>
         <!-- Select Role with MatAutoComplete-->
@@ -196,24 +199,24 @@
             <mat-label>Select Role</mat-label>
             <input matInput formControlName="rolename" [matAutocomplete]="roleAuto">
             <mat-autocomplete #roleAuto="matAutocomplete">
-              <mat-option *ngFor="let option of filteredRoleOptions | async" [value]="option.rolename">
+              <mat-option *ngFor="let option of filteredRoleOptions | async" [value]="option?.rolename">
                 {{ option.rolename }}
               </mat-option>
             </mat-autocomplete>
-            <mat-error *ngIf="employeeForm.get('role.rolename').hasError('required')">Role is
+            <mat-error *ngIf="employeeForm?.get('role.rolename')?.hasError('required')">Role is
               Required</mat-error>
           </mat-form-field>
         </div>
         <!-- Select Role with MatSelect -->
-        <div formGroupName="role" class="select-role-field">
+        <div formGroupName="role" class="select-role-field" >
           <mat-form-field appearance="fill">
             <mat-label>Select Role</mat-label>
             <mat-select name="role" formControlName="roleid">
-              <mat-option *ngFor="let option of roleOptions" [value]="option.roleid">
-                {{ option.rolename }}
+              <mat-option *ngFor="let option of roleOptions" [value]="option?.roleid">
+                {{ option?.rolename }}
               </mat-option>
             </mat-select>
-            <mat-error *ngIf="employeeForm.get('role.roleid').hasError('required')">Role is
+            <mat-error *ngIf="employeeForm?.get('role.roleid')?.hasError('required')">Role is
               Required</mat-error>
           </mat-form-field>
         </div>
@@ -228,22 +231,22 @@
               {{ option[1] }} {{option[2] ? ('- ' + option[2]) : ''}}
             </mat-option>
           </mat-autocomplete>
-          <mat-error *ngIf="employeeForm.get('manager').hasError('required')">Manager
+          <mat-error *ngIf="employeeForm.get('manager')?.hasError('required')">Manager
             is Required</mat-error>
         </mat-form-field>
         <!-- Manager with MatSelect-->
-        <mat-form-field *ngIf="managerflg" appearance="fill">
+        <mat-form-field *ngIf="managerflg && employeeForm?.get('manager')" appearance="fill">
           <mat-label>Select Manager</mat-label>
           <mat-select formControlName="manager" (selectionChange)="managerid($event)">
             <mat-option *ngFor="let option of managerOptions" [value]="option[0]">
-              {{ option[1] }} {{option[2] ? ('- ' + option[2]) : ''}}
+              {{ option[1] }} {{ option[2] ? ('- ' + option[2]) : '' }}
             </mat-option>
           </mat-select>
-          <!-- </mat-autocomplete> -->
-          <mat-error *ngIf="employeeForm.get('manager').hasError('required')">Manager
-            is Required
+          <mat-error *ngIf="employeeForm.get('manager')?.hasError('required')">
+            Manager is Required
           </mat-error>
         </mat-form-field>
+
         <!-- Team Lead  -->
         <mat-form-field *ngIf="false" appearance="fill">
           <mat-label>Select Team Lead</mat-label>
@@ -255,14 +258,15 @@
           </mat-autocomplete>
         </mat-form-field>
 
-        <mat-form-field *ngIf="teamleadflg" appearance="fill">
+        <mat-form-field *ngIf="teamleadflg && employeeForm?.get('teamlead')" appearance="fill">
           <mat-label>Select Team Lead</mat-label>
           <mat-select formControlName="teamlead" (keydown.backspace)="clearTeamLead()">
             <mat-option *ngFor="let option of teamLeadOptions" [value]="option[0]">
-              {{ option[1] }} {{option[2] ? ('- ' + option[2]) : ''}}
+              {{ option[1] }} {{ option[2] ? ('- ' + option[2]) : '' }}
             </mat-option>
           </mat-select>
         </mat-form-field>
+
 
       </div>
     </section>
