--- a/src/app/usit/components/employee-list/employee-list.component.html
+++ b/src/app/usit/components/employee-list/employee-list.component.html
@@ -33,6 +33,9 @@
       <mat-tab label="Inactive">
         <ng-container *ngTemplateOutlet="tableTemplate; context: { status: 'inactive' }"></ng-container>
       </mat-tab>
+         <mat-tab label="Consultant">
+        <ng-container *ngTemplateOutlet="tableTemplate; context: { status: 'Consultant' }"></ng-container>
+      </mat-tab>
     </mat-tab-group>
 
     <ng-template #tableTemplate>
