--- a/src/app/usit/components/reports/employee-reports/consultant-report/consultant-report.component.html
+++ b/src/app/usit/components/reports/employee-reports/consultant-report/consultant-report.component.html
@@ -9,7 +9,7 @@
         </div>
     </div>
     &nbsp;
-    <div class="row" oncopy="return false" onpaste="return false" oncut="return false">
+    <div class="row" oncopy="return false" onpaste="return false" oncut="return false"style="height: 700px; overflow: auto">
         <table class="table table-light table-bordered ">
             <thead class="thead-light">
                 <tr>
