--- a/src/app/usit/components/openreqs/job-application-comments/job-application-comments.component.html
+++ b/src/app/usit/components/openreqs/job-application-comments/job-application-comments.component.html
@@ -1,6 +1,6 @@
 <section class="header-container" id="mainHeader">
     <span class="header-text" mat-dialog-title id="mainHeaderTitle">
-        {{data.title}} - {{data.jobData.posted_on}}
+        {{data.title}} - {{data.jobData.requirement.posted_on}}
     </span>
     <button mat-icon-button (click)="onCancel()" class="btn-close" id="btnClose">
         <mat-icon>close</mat-icon>
