--- a/src/app/usit/components/recruitment/assigned-count/assigned-count.component.html
+++ b/src/app/usit/components/recruitment/assigned-count/assigned-count.component.html
@@ -41,7 +41,19 @@
                     <td mat-cell *matCellDef="let element" style="cursor: pointer;">
                         {{ element?.jobtitle }}
                     </td>
-                </ng-container>                
+                </ng-container>   
+                     <ng-container matColumnDef="EndClient">
+                    <th mat-header-cell *matHeaderCellDef> End Client</th>
+                    <td mat-cell *matCellDef="let element" style="cursor: pointer;">
+                        {{ element?.client }}
+                    </td>
+                </ng-container>       
+                <ng-container matColumnDef="ImplementaionPartner">
+                    <th mat-header-cell *matHeaderCellDef>Implementation Partner</th>
+                    <td mat-cell *matCellDef="let element" style="cursor: pointer;">
+                        {{ element?.vendor }}
+                    </td>
+                </ng-container>               
                 <ng-container matColumnDef="Location">
                     <th mat-header-cell *matHeaderCellDef> Location </th>
                     <td mat-cell *matCellDef="let element" style="cursor: pointer;">
