--- a/src/app/usit/components/vendor-management/vendor-list/vendor-list.component.scss
+++ b/src/app/usit/components/vendor-management/vendor-list/vendor-list.component.scss
@@ -284,3 +284,7 @@ ul.breadcrumb li:last-child {
     letter-spacing: var(--mat-paginator-container-text-tracking);
     margin-bottom: 17px !important;
 }
+ .mdc-data-table__cell, .mdc-data-table__header-cell {
+    padding: 0 4px 0 4px;
+    border-right: 1px solid lightgray !important;
+}
